# candlestick-chart

./: .gitignore  CMakeLists.txt  README.md
include/: MainDialog.h  candlesFwd.h  chartwindow.h  controller.h  load.h  model.h  styleset.h  themewindow.h  view.h
src/: MainDialog.cpp  chartwindow.cpp  chartwindow.ui  controller.cpp  load.cpp  main.cpp  model.cpp  styleset.cpp  themewindow.cpp  themewindow.ui  view.cpp
